--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -1,6 +1,7 @@
-# cacheUrl: https://GITHUB_USERNAME.github.io/REPO_NAME/cache.json
+cacheUrl: https://ryepenchi.github.io/osmosfeed-ryepenchi/cache.json
 sources:
   - href: https://github.com/osmoscraft/osmosfeed/releases.atom # Get new feature announcement via this feed
   - href: https://css-tricks.com/feed/
   - href: https://www.smashingmagazine.com/feed/
   - href: https://www.freecodecamp.org/news/rss/
+  - href: https://www.realpython.org/rss/
