--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -4,4 +4,4 @@ sources:
   - href: https://css-tricks.com/feed/
   - href: https://www.smashingmagazine.com/feed/
   - href: https://www.freecodecamp.org/news/rss/
-  - href: https://www.realpython.org/rss/
+  - href: https://www.theguardian.com/mostviewed/rss
